[package]
name = "zset"
version = "0.1.0"
edition = "2021"
autobenches = false
authors = ["Michael Groble"]
description = "Data structures needed to implement Redis' sorted set"
license = "BSD-3-Clause"

[dependencies]
rand = { version = "~0.8", features=["small_rng"] }

[features]
benchtest = []

[[example]]
name = "dump"

# to run with repeatable random numbers:
# cargo run --release --bin advancing_time_bench --features benchtest
[[bin]]
name = "advancing_time_bench"
path = "benches/advancing_time.rs"
required-features = ["benchtest"]

# To run:
# cargo +nightly -Z unstable-options test --release --features benchtest bench -- -Z unstable-options --report-time
[[bench]]
name = "benchtests"
path = "benches/lib.rs"
test = true
required-features = ["benchtest"]
